--- a/Css/v2/index.css
+++ b/Css/v2/index.css
@@ -89,7 +89,8 @@ a {
 
 #descripcion h2,
 #descripcion h3,
-#descripcion h4 {
+#descripcion h4,
+#descripcion h1 {
     width: fit-content;
 }
 
@@ -110,10 +111,6 @@ a {
     cursor: pointer;
     border: 3px solid black;
     opacity: 0;
-}
-
-.button:hover {
-    border: black 3px dotted;
 }
 
 #descargar div.button:hover img {
@@ -141,8 +138,10 @@ a {
     width: max-content;
 }
 
-#iniciar:hover {
-    border: black 3px dotted;
+#iniciar:hover,
+#descargarBtn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: solid rgba(255, 255, 255, 0.5) 3px;
 }
 
 .iniciar {
@@ -158,7 +157,9 @@ a {
     border-radius: 50%;
     position: absolute;
     opacity: 0;
-    z-index: -20;
+    z-index: -15;
+    background:  rgb(255, 249, 172);
+    background:  radial-gradient(circle,rgb(243, 243, 243) 0%, rgb(255, 249, 172) 100%); 
 }
 
 svg {
@@ -176,12 +177,14 @@ svg {
         max-height: 80vh;
     }
 }
+
 @media (max-width:1100px) {
     #perfilContainer {
         height: 65vh;
         width: 60vw;
     }
 }
+
 @media (max-width:796px) {
 
     #bienvenida {
