--- a/Css/v2/portfolio.css
+++ b/Css/v2/portfolio.css
@@ -5,16 +5,22 @@
     font-family: Inter, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-
 }
 
 body {
-    height: 3000vh;
+    height: 600vh;
+    scroll-behavior: smooth;
 }
 
 .sector {
-    padding: 10vh 5vw 0 5vw;
-    height: 90vh;
+    height: 100vh;
+}
+
+.animacionSector,
+.home {
+    padding: 10vh 15vw 0 15vw;
+    max-height: 90vh;
+    overflow: hidden;
 }
 
 .general {
@@ -80,18 +86,44 @@ html {
     justify-content: center;
 }
 
+/* ------------------------------- Portfolio v.1 */
+#v1 {
+    background: radial-gradient(circle, rgb(255, 249, 172) 0%,
+            rgb(255, 249, 172, 0.3) 32%,
+            rgb(255, 249, 172, 0.6) 50%,
+            rgb(255, 249, 172)100%);
+    padding: 2px;
+    width: fit-content;
+    border-radius: 8px;
+    font-weight: 800;
+    position: absolute;
+    right: 5vw;
+
+}
+
+#v1 a {
+    text-decoration: none;
+    color: black;
+}
+
+#v1:hover {
+    scale: 1.2;
+
+}
+
 /* ------------------------------- Tarjeta */
 .cardProject {
     min-width: 20vw;
-    background: rgba(255, 192, 203);
-    background: radial-gradient(circle, rgba(255, 192, 203) 0%,
-            rgba(255, 192, 203, 0.3)32%,
-            rgba(255, 192, 203, 0.6) 50%,
-            rgba(255, 192, 203, 0)100%);
+    background: rgb(255, 249, 172);
+    background: radial-gradient(circle, rgb(255, 249, 172) 0%,
+            rgb(255, 249, 172, 0.3) 32%,
+            rgb(255, 249, 172, 0.6) 50%,
+            rgb(255, 249, 172)100%);
     border-radius: 8px;
     padding: 1vh 1vw;
     max-height: 50vh;
 }
+
 
 /* ------------------------------- Descripción | Nombre | Foto */
 .descripcionProject {
@@ -122,6 +154,7 @@ html {
     align-items: center;
     justify-content: center;
     gap: 2vw;
+    overflow: hidden;
 }
 
 .linkProject {
@@ -138,7 +171,7 @@ html {
 
 a:hover,
 .playBtn:hover {
-    filter: invert(1);
+    scale: 1.2;
     cursor: pointer;
 }
 
@@ -148,12 +181,28 @@ a:hover,
 }
 
 .playBtn {
-    height:30px;
-    width:30px;
+    height: 30px;
+    width: 30px;
     border: solid 2px black;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+}
+
+@media (max-width: 796px) {
+    .general {
+        padding-left: 5vw;
+        padding-right: 5vw;
+    }
+
+    .animacionSector,
+    .home {
+        padding: 10vh 5vw 0 5vw;
+        max-height: 90vh;
+        overflow: hidden;
+    }
+
+
 }
