--- a/Css/v2/index.css
+++ b/Css/v2/index.css
@@ -9,8 +9,8 @@
 
 body {
     color: black;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     background: Linear-gradient(150deg,
             rgba(0, 0, 0, 0.3) 0%,
             rgba(0, 0, 0, 0.2) 30%,
@@ -35,9 +35,9 @@ a {
     position: absolute;
     left: 0;
     top: 0;
+    overflow: hidden;
 }
 
-/* Fondo Para efecto */
 #presentacion {
     height: 100vh;
     width: 100vw;
@@ -52,6 +52,13 @@ a {
     display: flex;
     align-items: end;
     overflow: hidden;
+}
+
+.botons,
+#miNombreEs,
+#bienvenidaH2,
+#perfil {
+    opacity: 0;
 }
 
 /* Foto de perfil */
@@ -101,7 +108,7 @@ a {
 /* Botones */
 #botones {
     display: flex;
-    gap: 2vw;
+    gap: 5vw;
     justify-content: center;
 }
 
@@ -109,8 +116,6 @@ a {
     border-radius: 8px;
     padding: 1% 5%;
     cursor: pointer;
-    border: 3px solid black;
-    opacity: 0;
 }
 
 #descargar div.button:hover img {
@@ -132,16 +137,20 @@ a {
 
 #iniciar,
 #descargarBtn {
-    background-color: rgba(0, 0, 0, 0);
-    border: black solid 3px;
+    background: radial-gradient(circle, rgb(255, 249, 172) 0%,
+            rgb(255, 249, 172, 0.3) 32%,
+            rgb(255, 249, 172, 0.6) 50%,
+            rgb(255, 249, 172)100%);
     font-weight: 800;
+    border: none;
     width: max-content;
+    min-width: 10vw;
 }
 
 #iniciar:hover,
 #descargarBtn:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-    border: solid rgba(255, 255, 255, 0.5) 3px;
+    border: solid rgb(255, 249, 172) 3px;
+    scale: 1.2;
 }
 
 .iniciar {
@@ -158,8 +167,8 @@ a {
     position: absolute;
     opacity: 0;
     z-index: -15;
-    background:  rgb(255, 249, 172);
-    background:  radial-gradient(circle,rgb(243, 243, 243) 0%, rgb(255, 249, 172) 100%); 
+    background: rgb(255, 249, 172);
+    background: radial-gradient(circle, rgb(243, 243, 243) 0%, rgb(255, 249, 172) 100%);
 }
 
 svg {
@@ -170,18 +179,43 @@ svg {
 }
 
 /*------------------------------------------ Responsive ------------------------------------------*/
+@media (min-width:1300px) {
 
-@media (max-width:1600px) {
+    button,
+    body {
+        font-size: 2.5rem;
+    }
+
+    #bienvenida {
+        left: -6vw;
+    }
+
+    #iniciar,
+    #descargarBtn {
+        min-height: 5vh;
+        min-width: 10vw;
+        border-radius: 10px;
+    }
+
+    .downloadImg {
+        width: 60px;
+        height: 60px;
+    }
+
     #presentacion img {
-        max-width: 50%;
+        max-width: 55%;
         max-height: 80vh;
     }
 }
 
-@media (max-width:1100px) {
-    #perfilContainer {
-        height: 65vh;
-        width: 60vw;
+@media (max-height:800px) {
+    button,
+    body {
+        font-size: 1rem;
+    }
+    .downloadImg {
+        width: 30px;
+        height: 30px;
     }
 }
 
@@ -214,12 +248,6 @@ svg {
     #botones {
         gap: 20vw;
     }
-
-    .bola,
-    svg {
-        display: none;
-    }
-
 }
 
 @media (max-width:500px) {
@@ -254,11 +282,6 @@ svg {
         background: url("../../Imagenes/v2/conexion.png") center center/cover no-repeat;
         background-repeat: no-repeat;
         z-index: -2;
-    }
-
-    .bola,
-    svg {
-        display: none;
     }
 
 }
